--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "noImplicitAny": true,
     "outDir": "./build/",
     "preserveConstEnums": true,
-    "removeComments": true,
+    "removeComments": true,        
+    "esModuleInterop": true,
     "sourceMap": true,
     "target": "es5"
   },
